@@ -23,6 +23,71 @@ static char *monthnames[]=
     "December"
 };
 
+/* this routine does a relaxed check of the header, thus allowing for
+   non-standard othernet lodelist headers */
+
+long parse_nodelist_date(char *filename)
+{
+    char buffer[300], *cpy, *cpj;
+    int sig;
+    int year, day;
+
+    FILE *f = fopen(filename, "r");
+
+    if (f == NULL)
+    {
+        logentry(LOG_ERROR, "cannot open %s", filename);
+        return -1L;
+    }
+
+    if (fgets(buffer, sizeof(buffer), f) == NULL)
+    {
+        fclose(f);
+        logentry(LOG_ERROR, "I/O error reading %s", filename);
+        return -1L;
+    }
+
+    fclose(f);
+
+    cpy = cpj = strstr(buffer, " -- ");
+    if (cpy == NULL) goto invalid;
+
+    while (cpy != buffer && !isdigit(*cpy)) cpy--;
+    if (!isdigit(*cpy)) goto invalid;
+
+    sig = 1; year = 0;
+    while (cpy != buffer && isdigit(*cpy))
+    {
+        year = year + sig * (*cpy - '0');
+        cpy --;
+        sig*=10;
+    }
+    if (year < 1980 || year > 9999) goto invalid;
+
+    while (!isdigit(*cpj)) cpj++;
+    if (!isdigit(*cpj)) goto invalid;
+
+    day = 0;
+    while (isdigit(*cpj))
+    {
+        day = day * 10 + (*cpj - '0');
+        cpj ++;
+    }
+    if (day < 1 || day > 366) goto invalid;
+
+    return get_julian_date(day, 0, year);
+
+invalid:
+    logentry(LOG_ERROR, "invalid header in %s", filename);
+    return -1L;
+}
+
+
+#if 0
+
+/* this routine does an exact check of the header. unfortunately, many
+   othernet nodelists fail this check */
+
 long parse_nodelist_date(char *filename)
 {
     char buffer[300], *cp;
@@ -102,3 +167,5 @@ invalid:
     logentry(LOG_ERROR, "Invalid nodelist header in %s.", filename);
     return -1L;
 }
+
+#endif
